[add] es6 - esNext - 비구조화 할당

--- a/study_code/b_step_03/prepros.config
+++ b/study_code/b_step_03/prepros.config
@@ -912,6 +912,33 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "dist/src/d_01_esnext_variable.js",
+        "config": {
+          "tasks": {
+            "babel": {
+              "enable": true
+            }
+          },
+          "customOutput": "js\\src\\d_01_esnext_variable.js"
+        }
+      },
+      {
+        "file": "dist/src/d_02_esnext_destructur.js",
+        "config": {
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "js\\src\\d_02_esnext_destructur.js",
+          "autoCompile": true
+        }
+      }
+    ]
   }
 }
