[add] javascript(arrow function) - esnext - 화살표함수2

--- a/study_code/b_step_03/prepros.config
+++ b/study_code/b_step_03/prepros.config
@@ -925,6 +925,21 @@
         }
       },
       {
+        "file": "dist/src/d_02_esnext_arrowFunction.js",
+        "config": {
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "js\\src\\d_02_esnext_arrowFunction.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "dist/src/d_02_esnext_destructur.js",
         "config": {
           "tasks": {
