--- a/study_code/b_step_03/prepros.config
+++ b/study_code/b_step_03/prepros.config
@@ -953,6 +953,21 @@
           "customOutput": "js\\src\\d_02_esnext_destructur.js",
           "autoCompile": true
         }
+      },
+      {
+        "file": "dist/src/d_04_fetch.js",
+        "config": {
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "js\\src\\d_04_fetch.js",
+          "autoCompile": true
+        }
       }
     ]
   }
