--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,9 @@
 **/prepros.config
 
 # node-modul 삭제
-**/node_moduls
-node_moduls
+**/node_modules
+node_modules
+**/package-lock.json
 
 # vscode
 **/*.vscode
